--- a/views/public/html/edit-candidate.html
+++ b/views/public/html/edit-candidate.html
@@ -575,6 +575,7 @@
             
             <p><strong class="text-primary">Note : </strong>For adding Bank and other details to Candidates please use the Edit icon.</p>
 
+            <a href="./exemployees.html" class="float-end">Check Ex-Employees details here!</a>
 
             <div class="content-wrapper">
                 <!-- Content -->
