--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -9,6 +9,8 @@
   data-template="vertical-menu-template-free"
 >
   <head>
+    <link rel="manifest" href="../manifest.json">
+
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <meta charset="UTF-8">
@@ -196,7 +198,7 @@
     <script src="../assets/js/main.js"></script>
     <script src ="./login.js"></script>
     <!-- Page JS -->
-
+    <script src="../js/script.js"></script>
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
