--- a/views/public/html/exemployees.html
+++ b/views/public/html/exemployees.html
@@ -69,12 +69,18 @@
       </head>
 <body>
     <div class="col ">
+        
         <div class=" card mt-3 col m-3 rounded-3 " >
+            
           <div class="card-body">
+            <a href="./indexpage.html" class="float-end btn btn-secondary ms-4">Back to Dashboard</a>
+
             <button id="exportBtn" class="btn btn-primary float-end">Export to Excel</button>
             <div class="d-flex align-items-center justify-content-between ">
+                
               <div class="content-left">
                 <h4>Ex-Employees and Completed Contracts</h4>
+                
                 <div class="content-right">
                     <!-- Add the Export to Excel button -->
                     <div class="border rounded-3 p-3 m-3" style="width: 600px;" ><strong>Candidates sailed more than once : </strong><span id="percentageex" class="text-danger"></span> out of <span id="totalemp" class="text-success" ></span> Nemo candidates</div>
