--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -181,7 +181,26 @@
 
     <!-- / Content -->
 
-
+<p>It is better in the App, Download here     <button id="downloadButton">Download App</button>
+</p>
+<script>
+  document.getElementById('downloadButton').addEventListener('click', () => {
+      if ('beforeinstallprompt' in window) {
+          // Trigger the installation prompt
+          deferredPrompt.prompt();
+          // Wait for the user to respond to the prompt
+          deferredPrompt.userChoice.then((choiceResult) => {
+              if (choiceResult.outcome === 'accepted') {
+                  console.log('User accepted the install prompt');
+              } else {
+                  console.log('User dismissed the install prompt');
+              }
+              // Reset the deferredPrompt variable
+              deferredPrompt = null;
+          });
+      }
+  });
+</script>
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
     <script src="../assets/vendor/libs/jquery/jquery.js"></script>
