--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -9,7 +9,7 @@
   data-template="vertical-menu-template-free"
 >
   <head>
-    <link rel="manifest" href="../manifest.json">
+    <!-- <link rel="manifest" href="../manifest.json"> -->
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
