--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -17,7 +17,7 @@
   <title>Search | Nsnemo</title>
   <!-- <link rel="stylesheet" href="../staticfiles/style/assets/vendor/fonts/boxicons.css"> -->
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="../assets/img/favicon/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
