--- a/views/public/html/seaservicetable.html
+++ b/views/public/html/seaservicetable.html
@@ -18,6 +18,7 @@
     <title>Sea Service | Nsnemo</title>
 
     <meta name="description" content="" />
+    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
 
     
 
