--- a/views/public/html/x.html
+++ b/views/public/html/x.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Nautilus Pre-Employment Evaluation Sheet</title>
+      <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+
 </head>
 <body>
   <h1>Nautilus Pre-Employment Evaluation Sheet</h1>
