--- a/views/public/html/add-c-document.html
+++ b/views/public/html/add-c-document.html
@@ -10,6 +10,8 @@
 >
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
