--- a/views/public/html/candidate-login.html
+++ b/views/public/html/candidate-login.html
@@ -9,6 +9,8 @@
   data-template="vertical-menu-template-free"
 >
   <head>
+    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+
     <meta charset="utf-8" />
     <meta
       name="viewport"
