--- a/views/public/html/edit-portagent-2.html
+++ b/views/public/html/edit-portagent-2.html
@@ -9,7 +9,8 @@
 
     <meta name="description" content="" />
 
-    
+    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
