--- a/views/public/html/exemployees.html
+++ b/views/public/html/exemployees.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+
         <meta charset="utf-8" />
         <meta
           name="viewport"
