--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -17,7 +17,7 @@
   <title>Dashboard | Nsnemo</title>
   <!-- <link rel="stylesheet" href="../../staticfiles/style/assets/vendor/fonts/boxicons.css"> -->
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="../assets/img/favicon/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <!-- Fonts -->
