--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | Nsnemo</title>
     <!-- <link rel="stylesheet" href="../staticfiles/style/assets/vendor/fonts/boxicons.css"> -->
-    <link rel="icon" type="image/x-icon" href="../assets/img/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
