--- a/views/public/html/reminder.html
+++ b/views/public/html/reminder.html
@@ -14,6 +14,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
+    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
 
     <title>Reminder | Nsnemo</title>
 
