--- a/views/public/html/reportsAll.html
+++ b/views/public/html/reportsAll.html
@@ -17,7 +17,8 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-  
+    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+
     <!-- Icons. Uncomment required icon fonts -->
     <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
   
