--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -616,10 +616,10 @@
 
                                         <!-- First set of input fields -->
                                         <div class="card-body pb-0">
-                                          <div class="col-md-6 mb-0">
+                                          <div class="col-md-6 border border-secondary-subtle rounded-3" >
                                             <!-- No need for the hidden input here -->
                                             <div id="imageContainer">
-                                                <img src="" alt="Candidate Photo">
+                                                <img src="" alt=" &nbsp;No Photo present for the candidate">
                                             </div>
                                         </div>
                                             <div class="row">
