--- a/views/public/html/manage-vendor.html
+++ b/views/public/html/manage-vendor.html
@@ -21,7 +21,32 @@
     <meta name="description" content="" />
 
     
-
+    <style>
+      .loader {
+        --r1: 154%;
+        --r2: 68.5%;
+        width: 60px;
+        aspect-ratio: 1;
+        border-radius: 50%; 
+        background:
+          radial-gradient(var(--r1) var(--r2) at top, #0000 79.5%, #269af2 80%),
+          radial-gradient(var(--r1) var(--r2) at bottom, #269af2 79.5%, #0000 80%),
+          radial-gradient(var(--r1) var(--r2) at top, #0000 79.5%, #269af2 80%),
+          #ccc;
+        background-size: 50.5% 220%;
+        background-position: -100% 0%, 0% 0%, 100% 0%;
+        background-repeat: no-repeat;
+        animation: l9 1.4s linear forwards;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+      }
+      
+      @keyframes l9 {
+        33%  {background-position: 0% 33%, 100% 33%, 200% 33%}
+        66%  {background-position: -100% 66%, 0% 66%, 100% 66%}
+        100% {background-position: 0% 100%, 100% 100%, 200% 100%}
+      }
+</style>  
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,7 +83,7 @@
   </head>
 
 <body>
- <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+  <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -67,13 +92,13 @@
             <div class="modal-body text-center mb-4">
               <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
-                <div class="spinner-border text-danger" role="status">
-                    <span class="visually-hidden">Loading...</span>
+                <div class="d-flex justify-content-center">
+                  <div class="loader"></div>
+                  </div>                    <span class="visually-hidden">Loading...</span>
                 </div>
             </div>
         </div>
-    </div>
-</div>   <!-- Layout wrapper -->
+    </div>   <!-- Layout wrapper -->
     <div class="layout-wrapper layout-content-navbar">
       <div class="layout-container">
         <!-- Menu -->
