--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -21,7 +21,32 @@
 
     <meta name="description" content="" />
 
-    
+    <style>
+      .loader {
+        --r1: 154%;
+        --r2: 68.5%;
+        width: 60px;
+        aspect-ratio: 1;
+        border-radius: 50%; 
+        background:
+          radial-gradient(var(--r1) var(--r2) at top, #0000 79.5%, #269af2 80%),
+          radial-gradient(var(--r1) var(--r2) at bottom, #269af2 79.5%, #0000 80%),
+          radial-gradient(var(--r1) var(--r2) at top, #0000 79.5%, #269af2 80%),
+          #ccc;
+        background-size: 50.5% 220%;
+        background-position: -100% 0%, 0% 0%, 100% 0%;
+        background-repeat: no-repeat;
+        animation: l9 1.4s linear forwards;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+      }
+      
+      @keyframes l9 {
+        33%  {background-position: 0% 33%, 100% 33%, 200% 33%}
+        66%  {background-position: -100% 66%, 0% 66%, 100% 66%}
+        100% {background-position: 0% 100%, 100% 100%, 200% 100%}
+      }
+</style>  
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -59,7 +84,7 @@
   </head>
 
 <body>
- <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+  <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -68,13 +93,13 @@
             <div class="modal-body text-center mb-4">
               <img src="../../public/assets/img/illustrations/undraw_cabin_hkfr.svg" style="width: 50px;height: auto;"/>
                 <p id="logoutMessage">Logging you out...</p>
-                <div class="spinner-border text-danger" role="status">
-                    <span class="visually-hidden">Loading...</span>
+                <div class="d-flex justify-content-center">
+                  <div class="loader"></div>
+                  </div>                    <span class="visually-hidden">Loading...</span>
                 </div>
             </div>
         </div>
-    </div>
-</div>   <!-- Layout wrapper -->
+    </div>   <!-- Layout wrapper -->
     <div class="layout-wrapper layout-content-navbar">
       <div class="layout-container">
         <!-- Menu -->
@@ -718,7 +743,7 @@
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
                       <div class="content-left">
-                        <h3 class="mb-0">0</h3>
+                        <h3 class="mb-0"><span id="sign-off"></span></h3>
                         <small>Sign Off</small>
                       </div>
                       <span class="badge bg-label-primary rounded-circle p-2">
@@ -763,7 +788,7 @@
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
                       <div class="content-left">
-                        <h3 class="mb-0">0</h3>
+                        <h3 class="mb-0"><span id="onboardcount"></span></h3>
                         <small>On Board</small>
                       </div>
                       <span class="badge bg-label-info rounded-circle p-2">
@@ -779,7 +804,7 @@
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
                       <div class="content-left">
-                        <h3 class="mb-0">0</h3>
+                        <h3 class="mb-0"><span id="signoffcount"></span></h3>
                         <small>Due for Sign Off </small>
                       </div>
                       <span class="badge bg-label-danger rounded-circle p-2">
@@ -794,7 +819,7 @@
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
                       <div class="content-left">
-                        <h3 class="mb-0">0</h3>
+                        <h3 class="mb-0"><span id="dueforrenewal"></span></h3>
                         <small>Due for Renewal</small>
                       </div>
                       <span class="badge bg-label-info rounded-circle p-2">
