--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -53,7 +53,7 @@
           animation-duration: 0.25s; /* Adjust the duration to slow down or speed up the spinner */
       }
       /* HTML: <div class="loader"></div> */
-.loader {    
+      .loader {    
   --r1: 154%;
   --r2: 68.5%;
   width: 60px;
@@ -66,14 +66,15 @@
     #ccc;
   background-size: 50.5% 220%;
   background-position: -100% 0%,0% 0%,100% 0%;
-  background-repeat:no-repeat;
-  animation: l9 0.89s infinite linear;
+  background-repeat: no-repeat;
+  animation: l9 0.8s linear 1;
 }
 @keyframes l9 {
     33%  {background-position:    0% 33% ,100% 33% ,200% 33% }
     66%  {background-position: -100%  66%,0%   66% ,100% 66% }
     100% {background-position:    0% 100%,100% 100%,200% 100%}
 }
+
   </style>
   
   </head>
