Project Complete - Sibbe

--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -810,27 +810,20 @@
                  <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz (Nov 20th 2023 - May 24th)</div>
               </div>
               
-              <div class="container-fluid " id="searchresult">
-                <div class="text-center fw-bold ">
-                  <!-- NAUTILUS SHIPPING -->
-                </div>
-                <!-- <div id="datetime" class="text-center "></div> -->
-              </div>
+             
               
               <!-- /Search -->
 
-              <span>
+              <span style="width: 100px;">
               
                  
-                  <div class="d-flex">
-                    <div class="flex-grow-1">
+                  
                       
-                      <span class="fw-semibold d-block fw-bolder text-primary" id="user_name"></span>
+                      <span class="fw-semibold d-block fw-bolder text-primary " id="user_name"></span>
                       
                       <small class="text-muted"><span id="user-group"></span></small>
                       
-                    </div>
-                  </div>
+                    
                
               </span>
                 </span>
@@ -873,12 +866,12 @@
                   <div style=''>
                   <div class="card mt-4"> 
                     <div class="d-flex justify-content-between p-2 ps-4 pe-4">
-                                              <span><a href="./birthday.html">Birthday Reminder</a></span>
-                    <span><a href="./reminder-document.html">Renewal Reminder</a></span>
-                    <span><a href="./reminder.html">Discussion Reminder</a></span>
+                                              <span><a href="./birthday.html">Birthdays</a></span>
+                    <span><a href="./reminder-document.html">Renewals</a></span>
+                    <span><a href="./reminder.html">Reminders</a></span>
                     <span><a href="./availableCandidates.html">Available Candidates</a></span>
                     <span><a href="./reportsAll.html">Export All</a></span>
-                    <span><a href="./queries.html">Queries and Suggestions</a></span>
+                    <span><a href="./queries.html">Queries</a></span>
                     <span><a href="./status.html"> Status</a></span>
                     <span><a href="./report.html"> Report</a></span>
 
